--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: 0;
+}
+
 body {
     background-color:rgb(6, 207, 207);
         font: normal 15pt Arial;
@@ -15,14 +21,44 @@ section {
     width: 400px;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
+    
+}
+
+h4 {
+    text-align: center;
 }
 
 .ltmlbox {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content:space-evenly;
 }
 
-.inpquant {
-    width: 80px;
+.inp_quant {
+    width: 250px;
+    height: 50px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.buttons {
+    border-radius: 20%;
+    background-color: rgb(6, 207, 207);
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    border: none;
+}
+
+#add_button{
+    margin-left: 10px;
+    text-align: center;
+    width: 90%;
+    height: 50px;
+    cursor: pointer;
+    background-color: rgb(6, 207, 207);
+    color: aliceblue;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
